--- a/css/common.css
+++ b/css/common.css
@@ -319,16 +319,12 @@ header nav {
 
 /*  */
 @media (max-width: 1500px) {
-  .gnb {
-    display: none;
+  .gnb li a {
+    padding-right: 4rem;
   }
 
   .mo-btn {
     padding-left: 5rem;
-  }
-
-  .mo-btn a {
-    display: block;
   }
 
   .foot-title {
@@ -339,6 +335,16 @@ header nav {
     gap: 2rem;
 
     flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 1330px) {
+  .gnb {
+    display: none;
+  }
+
+  .mo-btn a {
+    display: block;
   }
 }
 
@@ -353,7 +359,7 @@ header nav {
   }
 
   header nav {
-    height: 1rem;
+    height: 10rem;
   }
 
   .foot-logo a {
