--- a/css/sub-common.css
+++ b/css/sub-common.css
@@ -138,3 +138,45 @@ h3 {
 .intor-list li:nth-child(5):before {
   background-image: url(../img/intro-icon-2.svg);
 }
+
+@media (max-width: 1100px) {
+  .intor-list {
+    gap: 10rem;
+  }
+
+  .intor-list li {
+    gap: 1.5rem;
+  }
+
+  .intor-list li::before {
+    height: 5rem;
+  }
+}
+
+@media (max-width: 820px) {
+  .visual {
+    height: 70rem;
+  }
+
+  .intor-list li::before {
+    height: 5rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .visual h2 {
+    top: 42%;
+  }
+
+  .visual p {
+    top: 60%;
+  }
+}
+
+@media (max-width: 430px) {
+  .intor-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
