--- a/css/marketing.css
+++ b/css/marketing.css
@@ -101,6 +101,7 @@
 .question-list p {
   padding-top: 0.5rem;
   color: var(--Light-100);
+  font-size: var(--font-xs);
 }
 
 .answer-wrap {
@@ -123,4 +124,30 @@
 
 .question-list li.on > strong::after {
   transform: rotate(270deg); /* trftY */
+}
+
+@media (max-width: 1000px) {
+  .more {
+    margin-top: 2rem;
+  }
+
+  .c-more-btn {
+    width: 20rem;
+    padding: 2rem;
+  }
+
+  .question-list li {
+    border-radius: 2rem;
+    padding: 2rem;
+  }
+}
+
+@media (max-width: 430px) {
+  .more {
+    text-align: center;
+  }
+
+  .c-more-btn {
+    margin: 0 auto;
+  }
 }
