모바일 헤더

--- a/css/analytics.css
+++ b/css/analytics.css
@@ -52,7 +52,8 @@
   display: block;
   width: 7.9rem;
   height: 7.9rem;
-  background: var(--Light-100) url(../img/check.svg) no-repeat center / 60%;
+  /* background: var(--Light-100) url(../img/check.svg) no-repeat center / 60%; */
+  background: var(--Light-100) no-repeat center / 60%;
   border-radius: 100%;
 }
 
