--- a/css/common.css
+++ b/css/common.css
@@ -92,6 +92,7 @@ header {
 
 header nav {
   display: flex;
+  width: 100%;
   height: 22rem;
   /* background: #5f5f; */
   justify-content: space-between;
@@ -136,24 +137,66 @@ header nav {
   height: 2.5rem;
 }
 
-.join-btn a:nth-child(1) {
-  background: url(../img/search.svg) no-repeat 50% / cover;
-}
-
-.join-btn a:nth-child(2) {
-  background: url(../img/my.svg) no-repeat 50% / cover;
-}
-
-.join-btn a:nth-child(3) {
-  background: url(../img/shopping.svg) no-repeat 40% / contain;
-}
-
-.mo-btn a {
+.more-btn a {
   display: none;
   width: 2.5rem;
   height: 0.9rem;
   background: url(../img/more-btn.svg) no-repeat 100% / contain;
 }
+
+/* 모바일 메뉴 */
+.mobile-menu.active {
+  right: 0;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 70%;
+  height: 100vh;
+  background: var(--main-color);
+  color: #fff;
+  transition: 0.4s;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 8rem;
+
+  z-index: 1000;
+}
+
+.mobile-btn-close {
+  position: absolute;
+  top: 7rem;
+  right: 5.2rem;
+  width: 3.2rem;
+  height: 3.2rem;
+  background: url(../img/close-icon.svg) no-repeat 40% / contain;
+  z-index: 1000;
+}
+
+.mobile-btn-close {
+  cursor: pointer;
+}
+
+.mobile-gnb {
+  margin-top: 15rem;
+}
+
+.mobile-gnb li a {
+  font-weight: 600;
+  font-size: 2.2rem;
+  display: block;
+  padding: 2.5rem 0;
+  text-align: center;
+}
+
+.mobile-gnb li a:hover {
+  color: var(--color-foot);
+}
+/* 모바일 메뉴 end */
 
 /* footer */
 #footer {
@@ -319,14 +362,6 @@ header nav {
 
 /*  */
 @media (max-width: 1500px) {
-  .gnb li a {
-    padding-right: 4rem;
-  }
-
-  .mo-btn {
-    padding-left: 5rem;
-  }
-
   .foot-title {
     flex-wrap: wrap;
   }
@@ -338,12 +373,24 @@ header nav {
   }
 }
 
-@media (max-width: 1330px) {
+@media (max-width: 1350px) {
+  .gnb li a {
+    padding-right: 6rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .gnb li a {
+    padding-right: 4rem;
+  }
+}
+
+@media (max-width: 1080px) {
   .gnb {
     display: none;
   }
 
-  .mo-btn a {
+  .more-btn a {
     display: block;
   }
 }
@@ -352,10 +399,6 @@ header nav {
   .logo a {
     width: 10.5rem;
     height: 4.9rem;
-  }
-
-  .join-btn {
-    display: none;
   }
 
   header nav {
