--- a/css/common.css
+++ b/css/common.css
@@ -126,6 +126,10 @@ header nav {
   padding-right: 8rem;
 }
 
+.gnb li:last-child a {
+  padding-right: 0;
+}
+
 .more-btn a {
   display: none;
   width: 2.5rem;
