--- a/css/common.css
+++ b/css/common.css
@@ -92,7 +92,7 @@ header {
 
 header nav {
   display: flex;
-  width: 100%;
+
   height: 22rem;
   /* background: #5f5f; */
   justify-content: space-between;
@@ -109,7 +109,7 @@ header nav {
   display: block;
   width: 22rem;
   height: 9rem;
-  background: url(../img/logo.png) no-repeat 100% / cover;
+  background: url(../img/logo.svg) no-repeat 50% / contain;
 }
 
 .gnb {
@@ -388,13 +388,12 @@ header nav {
 }
 
 @media (max-width: 900px) {
-  .logo a {
-    width: 10.5rem;
-    height: 4.9rem;
-  }
-
   header nav {
     height: 10rem;
+  }
+
+  .logo a {
+    width: 18rem;
   }
 
   .foot-logo a {
