--- a/css/design.css
+++ b/css/design.css
@@ -1,9 +1,5 @@
 @charset "utf-8";
 
-.portfolio {
-  padding: 20rem 0 0;
-}
-
 .portfolio-title h3 {
   padding-bottom: 5rem;
 }
@@ -48,7 +44,7 @@
   bottom: 4rem;
   left: 4rem;
   z-index: 10;
-  color: var(--Light-100);
+  color: var(--light-100);
   font-weight: var(--font-semibold);
 
   font-size: var(--font-md);
@@ -78,7 +74,7 @@
 .price-card-title {
   padding: 2rem;
   background: var(--main-color);
-  color: var(--Light-100);
+  color: var(--light-100);
 
   border-radius: 2rem;
 }
@@ -113,7 +109,7 @@
   justify-content: space-between;
   gap: 5rem;
 
-  background: var(--Light-100);
+  background: var(--light-100);
 }
 
 .price-card li p {
