--- a/css/sub-common.css
+++ b/css/sub-common.css
@@ -14,7 +14,7 @@
 .visual-text h2,
 .visual-text p {
   position: absolute;
-  color: var(--Light-100);
+  color: var(--light-100);
   text-align: center;
 
   transform: translate(-50%, -50%);
@@ -66,8 +66,6 @@ h3 {
 }
 
 .intro {
-  padding: 12rem 0 17.6rem;
-  padding: 6.25% 0 9.1667%;
   text-align: center;
 }
 
@@ -84,12 +82,19 @@ h3 {
 
 .intor-list {
   display: flex;
+  justify-content: center;
+  gap: 18.5rem;
+  margin: 8.3rem auto 0;
+
+  /* border: 1px solid #000; */
+}
+
+.intro-marketing {
+  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 18.5rem;
   margin: 8.3rem auto 0;
-  width: 106.8rem;
-  width: 75.2113%;
 
   /* border: 1px solid #000; */
 }
@@ -173,8 +178,8 @@ h3 {
   }
 }
 
-@media (max-width: 430px) {
-  .intor-list {
+@media (max-width: 500px) {
+  .intro-marketing {
     display: flex;
     flex-direction: column;
     align-items: center;
