--- a/css/about.css
+++ b/css/about.css
@@ -1,22 +1,6 @@
 @charset "utf-8";
 
-.title {
-  padding-top: 100px;
-}
-
-.title dt {
-  font-weight: var(--font-bold);
-  font-size: var(--font-lg);
-}
-
-.title dd {
-  font-size: var(--font-md);
-}
 /* about */
-.about {
-  padding-top: 15rem;
-  padding-top: 7.6844%;
-}
 
 .about-text {
   flex: 1 1 max(40%, 300px);
@@ -51,7 +35,7 @@
   padding-top: 2rem;
   font-size: var(--font-sm);
   font-weight: var(--font-regular);
-  color: var(--Dark-60);
+  color: var(--dark-60);
 
   padding-top: 2.9542%;
 }
