--- a/css/analytics.css
+++ b/css/analytics.css
@@ -1,9 +1,5 @@
 @charset "utf-8";
 
-.information {
-  padding-top: 10rem;
-}
-
 .information-title h3 {
   padding-bottom: 2rem;
 }
@@ -29,7 +25,7 @@
   background: var(--main-color);
   padding: 7.7rem 10.1rem;
 
-  color: var(--Light-100);
+  color: var(--light-100);
 
   width: 85.7895%;
   gap: 10.1974%;
@@ -52,22 +48,9 @@
   display: block;
   width: 7.9rem;
   height: 7.9rem;
-  /* background: var(--Light-100) url(../img/check.svg) no-repeat center / 60%; */
-  background: var(--Light-100) no-repeat center / 60%;
+  /* background: var(--light-100) url(../img/check.svg) no-repeat center / 60%; */
+  background: var(--light-100) no-repeat center / 60%;
   border-radius: 100%;
-}
-
-.app {
-  margin-top: 20rem;
-}
-
-.app-list {
-  display: flex;
-  flex-direction: column;
-}
-
-.app-list dl {
-  display: flex;
 }
 
 @media (max-width: 1600px) {
