--- a/css/marketing.css
+++ b/css/marketing.css
@@ -9,7 +9,7 @@
 .more-title h4 {
   padding-top: 11.5rem;
 
-  color: var(--Light-100);
+  color: var(--light-100);
   padding-bottom: 4rem;
 
   font-size: var(--font-xxl);
@@ -26,7 +26,7 @@
   padding: 2.5rem 5rem;
   border-radius: 10rem;
 
-  color: var(--Light-100);
+  color: var(--light-100);
   background: var(--main-color);
 
   font-size: var(--font-md);
@@ -42,12 +42,8 @@
 }
 
 .c-more-btn:hover {
-  color: var(--Light-100);
-  background: var(--color-foot);
-}
-
-.question {
-  padding-top: 15rem;
+  color: var(--light-100);
+  background: var(--main-color2);
 }
 
 .question-title {
@@ -81,7 +77,7 @@
   align-items: center;
   justify-content: space-between;
 
-  color: var(--Light-100);
+  color: var(--light-100);
   font-size: var(--font-sm);
   font-weight: var(--font-bold);
 }
@@ -100,7 +96,7 @@
 
 .question-list p {
   padding-top: 0.5rem;
-  color: var(--Light-100);
+  color: var(--light-100);
   font-size: var(--font-xs);
 }
 
@@ -109,7 +105,7 @@
   flex-direction: column;
   padding: 5rem 0;
 
-  color: var(--Light-100);
+  color: var(--light-100);
 
   padding: 3.6% 0;
   font-size: var(--font-md);
@@ -142,7 +138,7 @@
   }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 500px) {
   .more {
     text-align: center;
   }
