--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,11 @@
 }
 
 @media (max-width: 950px) {
+  .swiper {
+    width: 100%;
+    height: 95.4rem;
+  }
+
   .swiper-button-next-1 {
     right: 3%;
   }
