--- a/css/design.css
+++ b/css/design.css
@@ -1,4 +1,74 @@
 @charset "utf-8";
+/* about */
+
+.about-text {
+  flex: 1 1 max(40%, 300px);
+  /* border: 1px solid #000; */
+}
+
+.about-con li {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 10rem;
+  align-items: center;
+  gap: 8%;
+}
+
+.about-con li:nth-child(even) {
+  flex-direction: row-reverse;
+
+  /* even: 짝수들만 포함 시키는것 */
+}
+
+.about-con dl dt {
+  padding-top: 3rem;
+  font-size: var(--font-lg);
+  font-weight: var(--font-bold);
+
+  padding-top: 4.4313%;
+}
+
+.about-con dl dd {
+  padding-top: 2rem;
+  font-size: var(--font-sm);
+  font-weight: var(--font-regular);
+  color: var(--dark-60);
+
+  padding-top: 2.9542%;
+}
+
+.about-con figure {
+  height: 47rem;
+  border-radius: var(--border-radius-lg);
+  overflow: hidden;
+  border-radius: 4rem;
+
+  flex: 1 1 max(40%, 300px);
+}
+
+.about-con figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-con li dl::before {
+  content: "";
+  display: block;
+  width: 6rem;
+  height: 6rem;
+}
+
+.about-con li:nth-child(1) dl::before {
+  background: url(../img/about-icon-1.svg) no-repeat 50% / contain;
+}
+.about-con li:nth-child(2) dl::before {
+  background: url(../img/about-icon-2.svg) no-repeat 50% / contain;
+}
+.about-con li:nth-child(3) dl::before {
+  background: url(../img/about-icon-3.svg) no-repeat 50% / contain;
+}
+/* 서비스 소개 */
 
 .portfolio-title h3 {
   padding-bottom: 5rem;
@@ -91,7 +161,7 @@
 }
 
 .price-card-title dd {
-  font-size: var(--font-xs);
+  font-size: var(--font-sx);
   font-weight: var(--font-regular);
 }
 
