서브하는중

--- a/css/sub-common.css
+++ b/css/sub-common.css
@@ -144,6 +144,76 @@ h3 {
   background-image: url(../img/intro-icon-2.svg);
 }
 
+/* about */
+
+.about-text {
+  flex: 1 1 max(40%, 300px);
+  /* border: 1px solid #000; */
+}
+
+.about-con li {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 10rem;
+  align-items: center;
+  gap: 8%;
+}
+
+.about-con li:nth-child(even) {
+  flex-direction: row-reverse;
+
+  /* even: 짝수들만 포함 시키는것 */
+}
+
+.about-con dl dt {
+  padding-top: 3rem;
+  font-size: var(--font-lg);
+  font-weight: var(--font-bold);
+
+  padding-top: 4.4313%;
+}
+
+.about-con dl dd {
+  padding-top: 2rem;
+  font-size: var(--font-sm);
+  font-weight: var(--font-regular);
+  color: var(--dark-60);
+
+  padding-top: 2.9542%;
+}
+
+.about-con figure {
+  height: 47rem;
+  border-radius: var(--border-radius-lg);
+  overflow: hidden;
+  border-radius: 4rem;
+
+  flex: 1 1 max(40%, 300px);
+}
+
+.about-con figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-con li dl::before {
+  content: "";
+  display: block;
+  width: 6rem;
+  height: 6rem;
+}
+
+.about-con li:nth-child(1) dl::before {
+  background: url(../img/about-icon-1.svg) no-repeat 50% / contain;
+}
+.about-con li:nth-child(2) dl::before {
+  background: url(../img/about-icon-2.svg) no-repeat 50% / contain;
+}
+.about-con li:nth-child(3) dl::before {
+  background: url(../img/about-icon-3.svg) no-repeat 50% / contain;
+}
+
 @media (max-width: 1100px) {
   .intor-list {
     gap: 10rem;
@@ -155,6 +225,12 @@ h3 {
 
   .intor-list li::before {
     height: 5rem;
+  }
+}
+
+@media (max-width: 830px) {
+  .about-text {
+    padding-bottom: 2.5rem;
   }
 }
 
