--- a/css/education.css
+++ b/css/education.css
@@ -2,76 +2,12 @@
 
 /* about */
 
-.about h3 {
-  padding-bottom: 6rem;
-}
-
-.about-text {
-  flex: 1 1 max(40%, 300px);
-  /* border: 1px solid #000; */
-}
-
-.about-con li {
-  display: flex;
-  flex-wrap: wrap;
-  padding-bottom: 30rem;
-  align-items: center;
-  gap: 8%;
-
-  padding-bottom: 19.7368%;
-}
-
-.about-con li:nth-child(4) {
-  padding-bottom: 0;
-}
-
 .about-con li:nth-child(odd) {
   flex-direction: row-reverse;
 }
 
-.about-con dl dt {
-  padding-top: 3rem;
-  font-weight: var(--font-bold);
-  font-size: var(--font-lg);
-}
-
-.about-con dl dd {
-  padding-top: 2rem;
-  font-weight: var(--font-regular);
-  font-size: var(--font-sm);
-  color: var(--dark-60);
-}
-
-.about-con figure {
-  height: 47rem;
-  border-radius: 4rem;
-  overflow: hidden;
-
-  flex: 1 1 max(40%, 300px);
-}
-
-.about-con figure img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.about-con li dl::before {
-  content: "";
-  display: block;
-  width: 6rem;
-  height: 6rem;
-}
-
-.about-con li:nth-child(1) dl::before {
-  background: url(../img/about-icon-1.svg) no-repeat 50% / contain;
-}
-
-.about-con li:nth-child(2) dl::before {
-  background: url(../img/about-icon-2.svg) no-repeat 50% / contain;
-}
-.about-con li:nth-child(3) dl::before {
-  background: url(../img/about-icon-3.svg) no-repeat 50% / contain;
+.about-con li:nth-child(even) {
+  flex-direction: row;
 }
 
 .about-con li:nth-child(4) dl::before {
@@ -114,7 +50,7 @@
 /* 공통 스타일 */
 
 .swiper {
-  height: 20rem;
+  height: 30rem;
 }
 
 .swiper-slide {
@@ -248,6 +184,10 @@
   .service-btn {
     width: 10rem;
     height: 10rem;
+  }
+
+  .swiper {
+    height: 20rem;
   }
 }
 
