--- a/css/design.css
+++ b/css/design.css
@@ -29,7 +29,7 @@
 }
 
 .portfolio-item {
-  width: 40rem !important;
+  /* width: 40rem !important; */
   height: 25rem !important;
   position: relative;
   border-radius: 2.4rem;
