--- a/css/education.css
+++ b/css/education.css
@@ -139,6 +139,7 @@
 
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
 }
 
@@ -165,19 +166,10 @@
 
 /* 쇼츠 */
 /* time */
-.time {
-  padding-top: 29.3rem;
-
-  padding-top: 15.2604%;
-}
-
 .time-list {
   display: flex;
   justify-content: space-between;
   gap: 2rem;
-  padding-top: 7.8rem;
-
-  padding-top: 5.1316%;
 }
 
 .time-list li {
