--- a/css/education.css
+++ b/css/education.css
@@ -232,6 +232,23 @@
   background: url(../img/time-list4.svg) no-repeat 50% / contain;
 }
 /* time end */
+
+.shorts-sev .sev-con {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.sev-btn {
+  display: flex;
+  gap: 5rem;
+}
+
+.sev-btn a {
+  width: 20rem;
+  height: 10rem;
+  border-radius: 3em;
+}
+
 /* 쇼츠 */
 
 .lecture-all {
@@ -248,6 +265,17 @@
   .service-btn {
     width: 10rem;
     height: 10rem;
+  }
+
+  .sev-btn {
+    display: flex;
+    gap: 3rem;
+  }
+
+  .sev-btn a {
+    width: 15rem;
+    height: 6rem;
+    border-radius: 3em;
   }
 }
 
@@ -331,11 +359,22 @@
 
 @media (max-width: 500px) {
   .time-list li {
-    width: 18.5rem;
-    height: 16.1rem;
+    width: 100%;
+    height: 100%;
   }
 
   .time-list li::after {
     bottom: 0.5rem;
+  }
+
+  .sev-btn {
+    display: flex;
+    gap: 2rem;
+  }
+
+  .sev-btn a {
+    width: 12rem;
+    height: 6rem;
+    border-radius: 3em;
   }
 }
